2022-11-25  Markus Gans  <guru.mail@muenster.de>
	* New helper function to update the widget text of the status bar

2022-11-20  Markus Gans  <guru.mail@muenster.de>
	* FTimer specialization for FObject in FObjectTimer

2022-11-12  Markus Gans  <guru.mail@muenster.de>
	* Direct access to a character in a print area via coordinates

2022-11-05  Markus Gans  <guru.mail@muenster.de>
	* The new class FTimer now contains all timer methods

2022-10-28  Markus Gans  <guru.mail@muenster.de>
	* Generalize text reading from terminal

2022-10-23  Markus Gans  <guru.mail@muenster.de>
	* Queuing of mouse and keyboard inputs is now implemented with 
	  a ring buffer

2022-10-20  Markus Gans  <guru.mail@muenster.de>
	* Speed-up code through more inline functions

2022-10-18  Markus Gans  <guru.mail@muenster.de>
	* To improve performance, the output buffer queue has been replaced 
	  with a ring buffer

2022-10-02  Markus Gans  <guru.mail@muenster.de>
	* Strict use of trailing return type

2022-06-13  Markus Gans  <guru.mail@muenster.de>
	* Added a unit test for the FWidget class

2022-05-29  Markus Gans  <guru.mail@muenster.de>
	* Avoiding some friend classes

2022-05-24  Markus Gans  <guru.mail@muenster.de>
	* A unit test for the FEvent class was added

2022-05-18  Markus Gans  <guru.mail@muenster.de>
	* Fixed some errors

2022-05-04  Markus Gans  <guru.mail@muenster.de>
	* Bug fixes in FLineEdit: 
	  - Swapped cursor move behavior in the methods stepCursorBackward() 
	    and stepCursorForward() 
	  - The inputText method now repositions the cursor on input and 
	    updates the change directly on the screen 
	  Thanks to Michael Lehn for reporting these issues

2022-04-17  Markus Gans  <guru.mail@muenster.de>
	* The FLineEdit and FTextView widgets got additional public methods for 
	  more control. Many thanks to Michael Lehn for the good suggestions

2022-03-01  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: Since February 14, setting the input cursor for the virtual 