@@ -1,3 +1,6 @@
+2022-11-26  Markus Gans  <guru.mail@muenster.de>
+	* Removed the deprecated method isNull() in FString
+
 2022-11-25  Markus Gans  <guru.mail@muenster.de>
 	* New helper function to update the widget text of the status bar
 
